Fix message content align and wrapping

--- a/css/main.less
+++ b/css/main.less
@@ -197,6 +197,8 @@
                     margin-top: 5px;
                     color: white;
                     font: 12pt "Apple Color Emoji", 'Cleanvertising';
+                    text-align: left;
+                    word-break: break-word;
                 }
 
             }
